fix: nav button for begin again

--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -108,7 +108,7 @@
       .project-title {
         display: block;
 
-        @include respond-max($bp-mob) {
+        @include respond-max($bp-tab) {
           display: none;
         }
       }
