--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -186,5 +186,10 @@
       width: 114px;
       right: 20px;
     }
+
+    @include respond-max($bp-mob-xs) {
+      bottom: 12px;
+      position: fixed;
+    }
   }
 }
