--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -172,6 +172,10 @@
         left: 28%;
         top: 150%;
       }
+
+      @include respond-max($bp-mob-xxs) {
+        height: 265px;
+      }
     }
 
     &.aw {
@@ -215,6 +219,10 @@
           height: 139px;
           top: 276px;
           left: 63px;
+        }
+
+        @include respond-max-height($bp-mob-xxs) {
+          top: 265px;
         }
 
         &.inactive-card {
@@ -266,6 +274,10 @@
           top: 411px;
         }
 
+        @include respond-max-height($bp-mob-xxs) {
+          top: 368px;
+        }
+
         &.inactive-card {
           left: -6%;
           top: -20%;
@@ -312,6 +324,10 @@
           left: 68px;
         }
 
+        @include respond-max-height($bp-mob-xxs) {
+          bottom: -7%;
+        }
+
         &.inactive-card {
           left: 30%;
           bottom: -75%;
@@ -354,6 +370,9 @@
         }
         @include respond-max-height($bp-mob-xs) {
           top: 41%;
+        }
+        @include respond-max-height($bp-mob-xxs) {
+          top: 39%;
         }
 
         &.inactive-card {
@@ -404,6 +423,10 @@
           right: -43px;
         }
 
+        @include respond-max-height($bp-mob-xxs) {
+          bottom: 0;
+        }
+
         &.inactive-card {
           bottom: -45%;
           right: -23%;
@@ -450,6 +473,9 @@
         @include respond-max-height($bp-mob-xs) {
           height: 121px;
           z-index: 10;
+        }
+        @include respond-max-height($bp-mob-xxs) {
+          bottom: 19%;
         }
 
         &.inactive-card {
@@ -499,6 +525,9 @@
           height: 88px;
           top: 36%;
           left: 22.5%;
+        }
+        @include respond-max-height($bp-mob-xxs) {
+          top: 33%;
         }
 
         &.inactive-card {
@@ -636,6 +665,10 @@
           z-index: 5;
           top: 69%;
           right: -4%;
+        }
+
+        @include respond-max-height($bp-mob-xxs) {
+          top: 73%;
         }
 
         &.inactive-card {
@@ -819,6 +852,10 @@
           top: 256px;
         }
 
+        @include respond-max-height($bp-mob-xxs) {
+          top: 218px;
+        }
+
         &.inactive-card {
           left: 73%;
           top: -14%;
@@ -863,6 +900,9 @@
           height: 74px;
           right: -22%;
         }
+        @include respond-max-height($bp-mob-xxs) {
+          bottom: 20px;
+        }
 
         &.inactive-card {
           right: -56%;
@@ -906,6 +946,9 @@
           height: 84px;
           top: 46%;
         }
+        @include respond-max-height($bp-mob-xxs) {
+          top: 43%;
+        }
 
         &.inactive-card {
           right: -36%;
@@ -948,6 +991,9 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 113px;
+        }
+        @include respond-max-height($bp-mob-xxs) {
+          bottom: -20px;
         }
 
         &.inactive-card {
@@ -1105,6 +1151,10 @@
           top: 56%;
           right: -10%;
         }
+        @include respond-max-height($bp-mob-xxs) {
+          top: 60%;
+          right: -15%;
+        }
 
         &.inactive-card {
           right: -46%;
@@ -1261,6 +1311,10 @@
           bottom: 5%;
           right: -19%;
         }
+        @include respond-max-height($bp-mob-xxs) {
+          height: 125px;
+          top: 82%;
+        }
 
         &.inactive-card {
           right: 10%;
@@ -1306,6 +1360,9 @@
         @include respond-max-height($bp-mob-xs) {
           height: 129px;
         }
+        @include respond-max-height($bp-mob-xxs) {
+          right: -11px;
+        }
 
         &.inactive-card {
           right: 30%;
@@ -1349,6 +1406,9 @@
           height: 130px;
           top: 324px;
           left: 63px;
+        }
+        @include respond-max-height($bp-mob-xxs) {
+          top: 316px;
         }
 
         &.inactive-card {
@@ -1399,6 +1459,9 @@
           height: 127px;
           top: 82%;
           right: -19px;
+        }
+        @include respond-max-height($bp-mob-xxs) {
+          top: 80%;
         }
 
         &.inactive-card {
@@ -1487,6 +1550,9 @@
         @include respond-max-height($bp-mob-xs) {
           height: 154px;
         }
+        @include respond-max-height($bp-mob-xxs) {
+          bottom: -2%;
+        }
 
         &.inactive-card {
           left: -28%;
@@ -1530,6 +1596,10 @@
           height: 133px;
         }
 
+        @include respond-max-height($bp-mob-xxs) {
+          top: 75%;
+        }
+
         &.inactive-card {
           left: -34%;
         }
@@ -1565,6 +1635,10 @@
         @include respond-max($bp-mob) {
           height: 129px;
           top: 300px;
+        }
+
+        @include respond-max-height($bp-mob-xxs) {
+          top: 262px;
         }
 
         &.inactive-card {
@@ -1603,6 +1677,10 @@
           height: 191px;
           right: -50px;
           top: 350px;
+        }
+
+        @include respond-max-height($bp-mob-xxs) {
+          top: 316px;
         }
 
         &.inactive-card {
