--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -139,14 +139,32 @@
         &.aw-poster,
         &.ii-poster,
         &.ss-poster,
-        &.bw-poster {
-          top: 60%;
+        &.bw-poster,
+        &.ns-poster {
+          top: 51%;
         }
         &.hw-poster {
-          top: 67%;
+          top: 61%;
         }
+      }
+
+      @include respond-max-height($bp-mob-xs) {
+        &.hw-poster {
+          top: 59%;
+        }
+      }
+
+      @include respond-max-height($bp-mob-xxs) {
+        &.aw-poster,
+        &.ii-poster,
+        &.ss-poster,
+        &.bw-poster,
         &.ns-poster {
-          top: 62%;
+          top: 56%;
+        }
+
+        &.hw-poster {
+          top: 64%;
         }
       }
 
@@ -173,7 +191,7 @@
         top: 150%;
       }
 
-      @include respond-max($bp-mob-xxs) {
+      @include respond-max-height($bp-mob-xxs) {
         height: 265px;
       }
     }
@@ -217,7 +235,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 139px;
-          top: 276px;
+          top: 256px;
           left: 63px;
         }
 
@@ -271,7 +289,7 @@
         @include respond-max-height($bp-mob-xs) {
           height: 117px;
           z-index: 5;
-          top: 411px;
+          top: 391px;
         }
 
         @include respond-max-height($bp-mob-xxs) {
@@ -319,8 +337,8 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 172px;
-          z-index: 6;
-          bottom: -2%;
+          z-index: 4;
+          bottom: 8%;
           left: 68px;
         }
 
@@ -369,7 +387,7 @@
           height: 137px;
         }
         @include respond-max-height($bp-mob-xs) {
-          top: 41%;
+          top: 36%;
         }
         @include respond-max-height($bp-mob-xxs) {
           top: 39%;
@@ -419,7 +437,7 @@
         @include respond-max-height($bp-mob-xs) {
           height: 137px;
           z-index: 11;
-          bottom: 4%;
+          bottom: 14%;
           right: -43px;
         }
 
@@ -473,6 +491,7 @@
         @include respond-max-height($bp-mob-xs) {
           height: 121px;
           z-index: 10;
+          bottom: 28%;
         }
         @include respond-max-height($bp-mob-xxs) {
           bottom: 19%;
@@ -523,7 +542,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 88px;
-          top: 36%;
+          top: 29%;
           left: 22.5%;
         }
         @include respond-max-height($bp-mob-xxs) {
@@ -573,6 +592,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 93px;
+          top: 34%;
         }
 
         &.inactive-card {
@@ -617,6 +637,7 @@
           height: 97px;
           width: 132px;
           left: 85%;
+          top: 52%;
         }
 
         &.inactive-card {
@@ -663,7 +684,7 @@
         @include respond-max-height($bp-mob-xs) {
           height: 85px;
           z-index: 5;
-          top: 69%;
+          top: 65%;
           right: -4%;
         }
 
@@ -713,7 +734,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 63px;
-          bottom: 38%;
+          bottom: 45%;
         }
 
         &.inactive-card {
@@ -756,7 +777,7 @@
 
         @include respond-max-height($bp-mob-xs) {
           height: 86px;
-          bottom: 6%;
+          bottom: 18%;
           left: 9%;
         }
 
@@ -801,7 +822,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 78px;
-          top: 66%;
+          top: 58%;
           left: 36px;
         }
 
@@ -899,6 +920,7 @@
         @include respond-max-height($bp-mob-xs) {
           height: 74px;
           right: -22%;
+          bottom: 120px;
         }
         @include respond-max-height($bp-mob-xxs) {
           bottom: 20px;
@@ -944,7 +966,9 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 84px;
-          top: 46%;
+          top: 39%;
+          z-index: 6;
+          right: -10%;
         }
         @include respond-max-height($bp-mob-xxs) {
           top: 43%;
@@ -991,6 +1015,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 113px;
+          bottom: 80px;
         }
         @include respond-max-height($bp-mob-xxs) {
           bottom: -20px;
@@ -1034,6 +1059,9 @@
           right: -39%;
           top: 62%;
         }
+        @include respond-max-height($bp-mob-xs) {
+          top: 52%;
+        }
 
         &.inactive-card {
           right: -76%;
@@ -1072,6 +1100,9 @@
           left: 9%;
           top: 40%;
         }
+        @include respond-max-height($bp-mob-xs) {
+          top: 38%;
+        }
 
         &.inactive-card {
           left: -12%;
@@ -1107,6 +1138,9 @@
           height: 123px;
           left: 19%;
           top: 77%;
+        }
+        @include respond-max-height($bp-mob-xs) {
+          top: 67%;
         }
 
         &.inactive-card {
@@ -1151,6 +1185,11 @@
           top: 56%;
           right: -10%;
         }
+
+        @include respond-max-height($bp-mob-xs) {
+          top: 53%;
+        }
+
         @include respond-max-height($bp-mob-xxs) {
           top: 60%;
           right: -15%;
@@ -1189,6 +1228,9 @@
           height: 132px;
           top: 75%;
           left: 7%;
+        }
+        @include respond-max-height($bp-mob-xs) {
+          top: 67%;
         }
 
         &.inactive-card {
@@ -1229,6 +1271,9 @@
           top: 36%;
           right: -17%;
         }
+        @include respond-max-height($bp-mob-xs) {
+          top: 32%;
+        }
 
         &.inactive-card {
           right: -50%;
@@ -1268,6 +1313,10 @@
           height: 172px;
           left: 14%;
           top: 44%;
+        }
+
+        @include respond-max-height($bp-mob-xs) {
+          top: 39%;
         }
 
         &.inactive-card {
@@ -1311,13 +1360,13 @@
           bottom: 5%;
           right: -19%;
         }
-        @include respond-max-height($bp-mob-xxs) {
-          height: 125px;
-          top: 82%;
+
+        @include respond-max-height($bp-mob-xs) {
+          bottom: 10%;
         }
 
         &.inactive-card {
-          right: 10%;
+          right: -71%;
           bottom: -45%;
         }
       }
@@ -1359,6 +1408,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 129px;
+          top: 35%;
         }
         @include respond-max-height($bp-mob-xxs) {
           right: -11px;
@@ -1404,7 +1454,7 @@
         }
         @include respond-max-height($bp-mob-xs) {
           height: 130px;
-          top: 324px;
+          top: 314px;
           left: 63px;
         }
         @include respond-max-height($bp-mob-xxs) {
@@ -1457,7 +1507,7 @@
 
         @include respond-max-height($bp-mob-xs) {
           height: 127px;
-          top: 82%;
+          top: 70%;
           right: -19px;
         }
         @include respond-max-height($bp-mob-xxs) {
@@ -1504,7 +1554,7 @@
 
         @include respond-max-height($bp-mob-xs) {
           height: 157px;
-          top: 56%;
+          top: 50%;
           right: -106px;
         }
 
@@ -1549,6 +1599,7 @@
 
         @include respond-max-height($bp-mob-xs) {
           height: 154px;
+          bottom: 9.5%;
         }
         @include respond-max-height($bp-mob-xxs) {
           bottom: -2%;
@@ -1596,6 +1647,10 @@
           height: 133px;
         }
 
+        @include respond-max-height($bp-mob-xs) {
+          top: 65%;
+        }
+
         @include respond-max-height($bp-mob-xxs) {
           top: 75%;
         }
@@ -1637,7 +1692,7 @@
           top: 300px;
         }
 
-        @include respond-max-height($bp-mob-xxs) {
+        @include respond-max-height($bp-mob-xs) {
           top: 262px;
         }
 
@@ -1679,8 +1734,8 @@
           top: 350px;
         }
 
-        @include respond-max-height($bp-mob-xxs) {
-          top: 316px;
+        @include respond-max-height($bp-mob-xs) {
+          top: 300px;
         }
 
         &.inactive-card {
@@ -1721,6 +1776,10 @@
         @include respond-max($bp-mob) {
           height: 120px;
           right: -150px;
+        }
+
+        @include respond-max-height($bp-mob-xs) {
+          top: 68%;
         }
 
         &.inactive-card {
