--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -172,7 +172,7 @@ main {
   flex-direction: column;
 
   @include respond-max($bp-mob) {
-    margin-top: -50px;
+    margin-top: -80px;
   }
 }
 
@@ -181,6 +181,12 @@ main {
   position: relative;
   overflow: hidden;
   text-align: center;
+
+  &.outro {
+    @include respond-max($bp-mob) {
+      margin-top: -70px;
+    }
+  }
 
   &.page-container-spacing {
     padding-top: 85px;
@@ -198,7 +204,7 @@ main {
       padding-bottom: 25px;
     }
     @include respond-max($bp-mob) {
-      padding-top: 50px;
+      padding-top: 28px;
       padding-bottom: 2px;
     }
   }
@@ -465,7 +471,7 @@ main {
       padding-bottom: 28px;
     }
 
-    @include respond-max($bp-mob-xxs) {
+    @include respond-max-height($bp-mob-xs) {
       padding-top: 62px;
       padding-bottom: 0px;
     }
