--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -29,6 +29,10 @@
     margin: 28px 0 20px 0;
   }
 
+  @include respond-max-height($bp-mob-xs) {
+    margin: 12px 0 20px 0;
+  }
+
   form {
     margin-bottom: 1%;
   }
@@ -108,6 +112,7 @@
   letter-spacing: 0;
   color: #5e7017;
   list-style: none;
+  margin: 12px;
 
   a,
   a:link {
